[package]
name = "memory-tracker"
version = "0.37.0-pre"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"

[dependencies]
arr_macro = "0.1.3"
log = "0.4"
tracing = "0.1.13"
near-logger-utils = { path = "../test-utils/logger" }
#ckb-logger = { path = "../logger" }
#ckb-metrics = { path = "../metrics" }
#ckb-db = { path = "../../db" }

# TODO Why don't disable this crate by "target.*" in the crates which are dependent on this crate?
#
# I really don't like to write such dirty code. I try a lot. But due to the limit of the "cargo"
# (and a lot of stupid bugs), at last, I have to write these stupid code.
#
# References:
# - [Cargo Issue-1197: Target-specific features](https://github.com/rust-lang/cargo/issues/1197)
# [target.'cfg(all(not(target_env = "msvc"), not(target_os="macos")))'.dependencies]
heim = "0.0"
futures = "0.3.1"
jemalloc-ctl = "0.3.3"
jemalloc-sys = "0.3.2"
jemallocator = { version = "0.3"  }


[dev-dependencies]
near-logger-utils = {path = "../test-utils/logger"}

[features]
default = []
profiling = []
